Add Deric and Azri profiles. Add Deric Photo

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -410,7 +410,41 @@
                 %p
                   They will need to learn how to become much more independent as a developer as compared to when they were in university.
 
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: '/assets/profile_pics/deric.jpg', width: '62px', height: '62px'}
+        .media-body
+          %h4.media-heading Deric Chong Rui Kin
+          %p
+            %i Asia Pacific University
 
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                2
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Start off small, working in a development team, developing different types of projects, web, standalone, etc. Work my way up to become a leader of the team perhaps. Finding a job in a decent company as it will boost my opportunities in the future.
+
+            %p
+              %b What did you think about the program?
+              %p
+                A very good experience throughout. Learned how development of project in the real world are like. A great program to enhance your current skills, expanding your knowledge in the IT field.  Meet new people and new friends.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Being someone that people looks up to. Someone that maybe designed or built something that everyone will be using. Working in an environment with good pay, and doing things i love to do. 
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  Attend everything. If possible dont miss any events that are held. You learn thing that you will no learn from the university. Prepare to work in a team and socialize with people there. You will get a new different exposure and its always fun to meet people with the same passion and interest as you. 
 
   .row.project
     .col-xs-12
@@ -462,7 +496,41 @@
                   Get ready for a whole lot fun with codes.
                   Heads up, learn the basics of Ruby before you begin.
 
- 
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: "holder.js/64x64"}
+        .media-body
+          %h4.media-heading Azri Mohd Khanil
+          %p
+            %i Asia Pacific University
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                3
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Looking for jobs and some work experience. After that I want to further my studies in artificial intelligence domain.
+
+            %p
+              %b What did you think about the program?
+              %p
+                It's a really good program I think.I learned lot of things that were not taught in college.I learn how to apply what I've learn in college(eg: programming) into real world problems.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  I look forward to enhance my knowledge in programming,web development and grab other relevant skills as well. My dream is to have hands-on experience in as many technical projects as I can post which I become well adept at the skill I have chosen to work upon.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  I'll highly recommend it to those who are interested to join. The participants should have some good logic and programming skills as well as the ability to learn something new, fast.For that matter i think this program is suitable  for IT or entrepreneur enthusiast.
 .modal.fade#profile{role: :dialog, "aria-hidden" => :true}
   .modal-dialog.modal-md
     .modal-content
