Add safwan's profile and photos

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -446,6 +446,42 @@
                 %p
                   Attend everything. If possible dont miss any events that are held. You learn thing that you will no learn from the university. Prepare to work in a team and socialize with people there. You will get a new different exposure and its always fun to meet people with the same passion and interest as you. 
 
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: '/assets/profile_pics/SafwanMarwan.jpg', width: '62px', height: '62px'}
+        .media-body
+          %h4.media-heading Safwan Marwan
+          %p
+            %i University Malaya
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                2
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                I was planning to establish a company with my friends, which should focusing on web development or android/ios application. Just not so much idea yet, so maybe I will start looking for a related job.
+
+            %p
+              %b What did you think about the program?
+              %p
+                The program is very interesting, except have to reschedule all my usual plan to suits my university and this program timetable. Other than that, it is too cool to be true. The instructors, members and the MAGIC staffs, all of them give such a lot of encouragement and hard work towards this program. I need to thank all of them, a lot. 
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  I always think that I should be somebody different but yet very meaningful to others, especially my family and friends. Since there is no one in my family are doing what I am doing right now, so it is right to go on.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  Please join. It helps you to manage your life in just three month.
+
   .row.project
     .col-xs-12
       = image_tag 'magicbeans.png', class: 'pull-right'
@@ -503,7 +539,7 @@
         .media-body
           %h4.media-heading Azri Mohd Khanil
           %p
-            %i Asia Pacific University
+            %i University Malaya
 
           .hidden
             %p
@@ -531,6 +567,7 @@
               %p
                 %p
                   I'll highly recommend it to those who are interested to join. The participants should have some good logic and programming skills as well as the ability to learn something new, fast.For that matter i think this program is suitable  for IT or entrepreneur enthusiast.
+
 .modal.fade#profile{role: :dialog, "aria-hidden" => :true}
   .modal-dialog.modal-md
     .modal-content
