Added Imran profile and photo

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -367,7 +367,7 @@
     .col-xs-12
       = image_tag 'skillcounter.png', class: 'pull-right'
 
-      %h3#d2dd
+      %h3#skillcounter
         Skillcounter
         %small CPD made easy
 
@@ -410,7 +410,6 @@
                 %p
                   They will need to learn how to become much more independent as a developer as compared to when they were in university.
 
-    .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: '/assets/profile_pics/deric.jpg', width: '62px', height: '62px'}
@@ -446,7 +445,6 @@
                 %p
                   Attend everything. If possible dont miss any events that are held. You learn thing that you will no learn from the university. Prepare to work in a team and socialize with people there. You will get a new different exposure and its always fun to meet people with the same passion and interest as you. 
 
-    .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: '/assets/profile_pics/SafwanMarwan.jpg', width: '62px', height: '62px'}
@@ -486,7 +484,7 @@
     .col-xs-12
       = image_tag 'magicbeans.png', class: 'pull-right'
 
-      %h3#d2dd
+      %h3#magicbeans
         Social Media Publishing 
         %small 
 
@@ -532,7 +530,6 @@
                   Get ready for a whole lot fun with codes.
                   Heads up, learn the basics of Ruby before you begin.
 
-    .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: "holder.js/64x64"}
@@ -569,7 +566,6 @@
                   I'll highly recommend it to those who are interested to join. The participants should have some good logic and programming skills as well as the ability to learn something new, fast.For that matter i think this program is suitable  for IT or entrepreneur enthusiast.
 
 
-    .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: '/assets/profile_pics/mattheaw.jpg', width: '62px', height: '62px'}
@@ -604,6 +600,42 @@
               %p
                 %p
                   If you want to join this program, you better be serious, else you won't be able to learning anything here. Just joking, by joining this program, you will learn a lot of new things that do not teach in the college. You won't need to prepare anything but yourself. You must contribute to the team when you start the program. It will be a tough project if you didn't contribute to the team. Try to participate, contribute as much as you can then you can experience how awesome this program was.
+
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: '/assets/profile_pics/imran.jpeg', width: '62px', height: '62px'}
+        .media-body
+          %h4.media-heading Mohamed Imran Bin Ismail
+          %p
+            %i University KL
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                N/A
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                At the moment I have received a couple of freelance jobs. But I'm not planning on stopping here. What I'm really looking forward to is a full-time position in a company that can really improve the skills that I've acquired from PFS.
+
+            %p
+              %b What did you think about the program?
+              %p
+                It was amazing, I get to learn neat stuff like team collaboration, TDD and the best part is learning how to function as team during the development phase. I get to actually utilize these skills immediately after learning it. It was exhaustingly fun!
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Starting up something good!
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  Put your heart into it and you'll be rewarded two times fold!
 
 .modal.fade#profile{role: :dialog, "aria-hidden" => :true}
   .modal-dialog.modal-md
