--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -445,6 +445,7 @@
                 %p
                   Attend everything. If possible dont miss any events that are held. You learn thing that you will no learn from the university. Prepare to work in a team and socialize with people there. You will get a new different exposure and its always fun to meet people with the same passion and interest as you. 
 
+    .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: '/assets/profile_pics/SafwanMarwan.jpg', width: '62px', height: '62px'}
@@ -479,6 +480,42 @@
               %p
                 %p
                   Please join. It helps you to manage your life in just three month.
+
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: '/assets/profile_pics/mattheaw.jpg', width: '62px', height: '62px'}
+        .media-body
+          %h4.media-heading Matheaw Liew Zhi Ying
+          %p
+            %i Asia Pacific University
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                1
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                After I graduate, I will work in an awesome company and working on some interesting software project. I will try to expand my network in the industry to build my connection with the industry people. I will try to apply for the start-up company as I can learn more Knowledge there. After working in the company for 1 - 2 years, if there are no any further personal development and opportunity, I will switch to a large scale company to further extend my career. When I gain enough experience, I will try to plan my start-up and working on it if the start-up plan is feasible.
+
+            %p
+              %b What did you think about the program?
+              %p
+                The program is great but it still need some improvement such as team building and team management. I learn a lot of new knowledge through this program. New programming language Ruby on rails, push the app live on heroku, github to maintain the code integrity. In skillcounter team, I had develop the model, view and controller for the application. I also know how to wirte rspec test cases to test each of the function. Besides that I also create the association between the user and event. The mailer and payment gateway in skillcounter is something that very useful for my future application development experience.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  On the age of 30, I will to start a new start-up company of my own. If it was too hard for me, I will find few friends to develop an application that has market value to gain the reputation first. I will work as a part time freelancer also to increase my skill and knowledge.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  If you want to join this program, you better be serious, else you won't be able to learning anything here. Just joking, by joining this program, you will learn a lot of new things that do not teach in the college. You won't need to prepare anything but yourself. You must contribute to the team when you start the program. It will be a tough project if you didn't contribute to the team. Try to participate, contribute as much as you can then you can experience how awesome this program was.
+
 
   .row.project
     .col-xs-12
@@ -565,42 +602,6 @@
                 %p
                   I'll highly recommend it to those who are interested to join. The participants should have some good logic and programming skills as well as the ability to learn something new, fast.For that matter i think this program is suitable  for IT or entrepreneur enthusiast.
 
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/mattheaw.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Matheaw Liew Zhi Ying
-          %p
-            %i Asia Pacific University
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                After I graduate, I will work in an awesome company and working on some interesting software project. I will try to expand my network in the industry to build my connection with the industry people. I will try to apply for the start-up company as I can learn more Knowledge there. After working in the company for 1 - 2 years, if there are no any further personal development and opportunity, I will switch to a large scale company to further extend my career. When I gain enough experience, I will try to plan my start-up and working on it if the start-up plan is feasible.
-
-            %p
-              %b What did you think about the program?
-              %p
-                The program is great but it still need some improvement such as team building and team management. I learn a lot of new knowledge through this program. New programming language Ruby on rails, push the app live on heroku, github to maintain the code integrity. In skillcounter team, I had develop the model, view and controller for the application. I also know how to wirte rspec test cases to test each of the function. Besides that I also create the association between the user and event. The mailer and payment gateway in skillcounter is something that very useful for my future application development experience.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  On the age of 30, I will to start a new start-up company of my own. If it was too hard for me, I will find few friends to develop an application that has market value to gain the reputation first. I will work as a part time freelancer also to increase my skill and knowledge.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  If you want to join this program, you better be serious, else you won't be able to learning anything here. Just joking, by joining this program, you will learn a lot of new things that do not teach in the college. You won't need to prepare anything but yourself. You must contribute to the team when you start the program. It will be a tough project if you didn't contribute to the team. Try to participate, contribute as much as you can then you can experience how awesome this program was.
-
     .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
@@ -636,6 +637,42 @@
               %p
                 %p
                   Put your heart into it and you'll be rewarded two times fold!
+
+
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: '/assets/profile_pics/jeva.jpg', width: '62px', height: '62px'}
+        .media-body
+          %h4.media-heading Jevaraajkumar A/L Selvarajah
+          %p
+            %i Multi Media University
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                1
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                I am currently doing my internship with Hewlett Packard(HP) Cyberjaya in Technology & Operations Department.My next would be finding a permanent job in my studied course which is Information Technology Majoring in Software Engineering.I am interested in software development site especially web development.Therefore, I am looking forward to get a job related to those areas.
+
+            %p
+              %b What did you think about the program?
+              %p
+                I think this program is really awesome especially for final year students because this programs leads to a right path before they step into real working world. I have gained allot of knowledge and guidance throughout this program which would really benefit me in future.I hope this programs continues to create more young talented graduates.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  My aspirations would be a young successful IT professional and also be a Project Manager in future . I also would like to do my PhD one day soon if everything permits.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  I would say to him to join this program as it is really good to gain more knowledge technically and also professionally. I would say its going to be a great program as it will a stepping stone for him/her future where all their skills will be brushed up. I also will advise to be more knowledgeable technically because this program would suit them perfectly. I would encourage final year student and also internship students o participate in this program to get more benefit from it. :) 
 
 .modal.fade#profile{role: :dialog, "aria-hidden" => :true}
   .modal-dialog.modal-md
