Add Adrian photo and profile

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -362,6 +362,203 @@
               %p
                 %p
                   Prepare yourself with the knowledge of development life cycle, basic programming knowledge will do, and most importantly, be awesome! =D
+  .row.project
+    .col-xs-12
+      = image_tag 'fastpr-logo-small.png', class: 'pull-right'
+
+      %h3#fastpr
+        FastPR
+        %small
+
+      %p FastPR is designed to allow people to make contact with members of the Press easily, by building a comprehensive list of contacts. This will allow it to become a one-stop-centre for finding the right members of the press to cover your business, event, or other notable matters.
+
+
+  .row.students
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: "holder.js/64x64"}
+        .media-body
+          %h4.media-heading Nor Shazwan Shah Bin Nor Hisham Shah
+          %p
+            %i Universiti Teknologi Malaysia
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                3
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                After i graduate i'm going to work for private company, gathering as much experience and knowledge as i can. But at the same time, i will be working on a project that i am planning to launch. After that, i am planning to start my own company with trusted friends. 
+
+            %p
+              %b What did you think about the program?
+              %p
+                I've learnt a lot about tools that can be used when developing in a team. My instructor is really helpful and knowledgeable.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  I want to build something that everybody can and will want to use everyday in their life.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  It is worth every bit of your time if you are willing to commit to it. Be curious and explore stuff that is not taught in the class.
+
+
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: "holder.js/64x64"}
+        .media-body
+          %h4.media-heading Fakhitah Binti Ridzuan
+          %p
+            %i Universiti Teknologi Malaysia
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                3
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Maybe i should proceed with master. Or maybe i should be thinking about working. Depends on the economy at the moment.  
+
+            %p
+              %b What did you think about the program?
+              %p
+                Super duper awesome. Join this first. And you'll get the feel
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Pursue master and phd before age 30.
+                %p
+                  Build my own company with my siblings.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  Explore more. Expect less. Anyone who think that they are awesome should join this. Find your confidence and do your best. 
+
+
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: "holder.js/64x64"}
+        .media-body
+          %h4.media-heading Nurfarrah 'Ain Amran
+          %p
+            %i Universiti Teknologi Malaysia
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                2
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Finding a job, get into interview, get a job, develop systems, get  experience, further study in business or management, build a company  
+
+            %p
+              %b What did you think about the program?
+              %p
+                Really beneficial for students, help students to experience a teamwork, experience to develop a real system, working with people, learning new thing (for me ruby, github, cloud9, heroku are new things)
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Develop at least one generic software that can facilitate many peoples such as myTeksi, develop many softwares that are beneficial to disable people, build my own company
+                %p
+                  Build my own company with my siblings.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  Should have discipline, can work in a team, ready to sacrifice a few things, cam manage their time properly. However, this program gives them something more than what they done for this program. 
+
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: "holder.js/64x64"}
+        .media-body
+          %h4.media-heading Nur Atiqah Binti Awalludin
+          %p
+            %i Universiti Teknologi Malaysia
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                3
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Continue my studies by taking up MBA, then apply for a business and technology consultant spot at GOOGLE or any other up and coming major tech company. Become the first woman CEO of a technology company in Malaysia if the coveted role still exists. Teach people along the way.
+
+            %p
+              %b What did you think about the program?
+              %p
+                The program is great. It helps us learn new tricks in the never ending world of programming. I just wish if it didn't clash with our uni schedule and maybe be done during semester break. Then, I could have focused on the project more.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Inspire at least one person to never give up on their dreams.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  Be ready for a huge commitment. I wasn't and I know how that ended. 
+
+
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: "holder.js/64x64"}
+        .media-body
+          %h4.media-heading Ben Liew Voon Bin
+          %p
+            %i UTEM
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                1
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                There is still 1 last academic study semester for me left, my aim is to continue building, continue learning, continue to hone my RoR skills. I also picked web app as my Final Year Project, which allow me to spend even more time on developing. And hopefully, by the end of the semester I will be good enough to be able to apply for Ruby on Rails developer. And the top of my list, is to intern or even better land a job in Silicon Valley, but at the end of the day, anywhere is alright as long as the tech scene in that city is active. So if you ask me what will I be doing right after I graduate will most probably try to land a job first in an active tech scene, and slowly learn and networking. As I am really interested in building my very own startup. 
+
+            %p
+              %b What did you think about the program?
+              %p
+                First of all, I'm really grateful that I'm being chosen for this program. It sparks my passion in programming all over again. Getting into this program, is one of the best choice I made during my university life. Alright back to the program, so the first thing I want to mention is that I am really thankful of Mr.Kevin, for his patience and time. As you all know, the FastPR class is actually conducted through hangouts remotely. And when you do things remotely like this especially teaching a bunch of newbies, people tend to get frustrated and eventually just give up or stop or something, but Kevin was very very patience with us even when we fail to do what we instructed. Or even when he needs to repeat the same thing over and over again, to the same group of students. As for the learning program, I'll say that it helps a lot, it speed up our learning process as well as answer a lot of our question which might take us hours of googling and searching around.  
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  I don't think I'll be able to say that I can save the world or something like that yet, but I do hope that one day to build a startup of my own that will eventually be part of everyone's life. 
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  Since this program directs to University students, especially last year students, I would say, if you're really planning to get into the tech scene, this is one of the best program that kickstarts your career. In my opinion, having a skill like Ruby on Rails web development definitely better than having great CGPA, I highly recommend this program for those who are planning to join the tech scene, especially as a developer. 
+
+
 
   .row.project
     .col-xs-12
@@ -673,6 +870,45 @@
               %p
                 %p
                   I would say to him to join this program as it is really good to gain more knowledge technically and also professionally. I would say its going to be a great program as it will a stepping stone for him/her future where all their skills will be brushed up. I also will advise to be more knowledgeable technically because this program would suit them perfectly. I would encourage final year student and also internship students o participate in this program to get more benefit from it. :) 
+
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: '/assets/profile_pics/adrian.jpg', width: '62px', height: '62px'}
+        .media-body
+          %h4.media-heading Ching Hua Chiam (Adrian)
+          %p
+            %i University Malaya
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                3
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Travelling and work at the same time. Will be venturing into online businesses/saas so that I can work and travel at the same time. 
+
+            %p
+              %b What did you think about the program?
+              %p
+                It is a very good program for university students as this teaches them the real life skills and not purely theories. Personally I benefited a lot from the program learning how to build web application through rails. It is helping me achieve what I want which is to apply the knowledge but not just learning the theories which is what universities are doing.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Travel and explore the world.
+                %p
+                  Be an inspiration to more people so that they take charge of their life and don't let working in the corporate/job to limit themselves.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  By all means, join the program as they will be benefiting a lot from the program. I don't think there is much preparation needed as I am not from a strong programming background but I survived it. Just be ready to sacrifice your time to really master the skill.
+
 
 .modal.fade#profile{role: :dialog, "aria-hidden" => :true}
   .modal-dialog.modal-md
