Add tahfiz profile

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -447,8 +447,7 @@
               %p
                 %p
                   Explore more. Expect less. Anyone who think that they are awesome should join this. Find your confidence and do your best. 
-
-
+    .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: "holder.js/64x64"}
@@ -486,7 +485,7 @@
                 %p
                   Should have discipline, can work in a team, ready to sacrifice a few things, cam manage their time properly. However, this program gives them something more than what they done for this program. 
 
-    .col-xs-4
+
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: "holder.js/64x64"}
@@ -522,7 +521,7 @@
                 %p
                   Be ready for a huge commitment. I wasn't and I know how that ended. 
 
-
+    .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: "holder.js/64x64"}
@@ -557,6 +556,42 @@
               %p
                 %p
                   Since this program directs to University students, especially last year students, I would say, if you're really planning to get into the tech scene, this is one of the best program that kickstarts your career. In my opinion, having a skill like Ruby on Rails web development definitely better than having great CGPA, I highly recommend this program for those who are planning to join the tech scene, especially as a developer. 
+
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: "holder.js/64x64"}
+        .media-body
+          %h4.media-heading Ahmad Tahfiz bin Ahmad Fauzi
+          %p
+            %i Universiti Teknologi Malaysia
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                3
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Become a software developer/programmer in a cool and fun company
+
+            %p
+              %b What did you think about the program?
+              %p
+                It is enjoyable to learn and good to know working environment of a programmer
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Try your best in life and pray for better
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  It is really good learning process for students before graduates and good to know a working environment to real client
+
 
 
 
