Add programme description

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -3,7 +3,7 @@
   .row
     .col-xs-12.page-header
       %h1 Projects
-      %p Some description goes here. Maybe even a list of the projects to click on:
+      %p A total of 8 projects were considered for the program and 4 were shortlisted and seated based on best fit between learning outcomes and development outcomes:
       %ul
         %li
           %a{href: '#d2dd'}Door 2 Door Doctor
