Modified Door2DoorDoctor to single page profiles

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -195,3 +195,12 @@ body {
 .students a img {
   cursor: pointer !important;
 }
+
+.individual-profile a.media-left img {
+  width: 120px !important;
+  height: 120px !important;
+}
+
+.row.students .extended {
+  @extend .hidden;
+}
