--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -1,4 +1,3 @@
-- start_time = Date.new(2015,1,10)
 .container
   .row
     .col-xs-12.page-header
@@ -26,342 +25,19 @@
       %p We specialize in the provision of services make dealing with medical issues a little more easier by providing high quality customized services ranging from Non-Emergency Transportation, Consultation, Doctor House Calls to provision of Physio sessions at home and even Confinement lady services.
   .row.students
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/breena.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Breena Theseira
-          %p
-            %i Asia Pacific University
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1 1/2
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                I would generally be on a lookout for experience - in terms of internships & jobs.
-
-              %p
-                I would mainly be looking for web development projects/jobs in general to brush up Ruby on Rails skills, if possible with flexible hours. 
-
-              %p
-                In the meantime, I would also be looking for jobs to work with experienced web development freelancers, and then gradually move towards freelancing in the future.
-            %p
-              %b What did you think about the program?
-              %p
-                I generally think that this program is super beneficial to any new programmers that has a basic background in software development. University students like me would find it enriching and an eye-opener especially towards job prospects in the future (I didn't know freelancing was another option aside from having corporate career).
-
-              %p
-                It was fun to meet new programmers and work together in a team to create an awesome solution that would benefit the people.
-
-              %p
-                Oh and I think that some basics about Javascripts should be included as well."
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  I want to continue building stuff (code, preferably, but there might be other physical projects too) and travel the world at the same time. I'd want to live with simplicity; just like the main characters in the travelling show ""Two Greedy Italians""... link if haven't heard of them: https://www.youtube.com/watch?v=WvZ1w_oPvJk
-                %p
-                  I would also want to be part of projects (not necessarily software-based) that improves the lives of humans better and the environment.
-                %p
-                  I want to learn Japanese, Thai, Spanish and Portuguese as well; either because I have a particular interest in the language, or it's part of my heritage.
-                %p
-                  Another aspiration I have is to experience university life overseas... but it's not really something that I would undertake super soon. One of those ""might do, but not set in stone""."
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  You need to make sure you can commit 3 months of your time into learning and building projects, or else, don't apply. Wait for the next intake. On the first day, come up with a simple website idea (can be static pages at first, but it would get complex as you go) and implement the lessons learnt there. 
-                %p
-                  Start self-learning about Git. If you have only ever used Windows your whole life, start dual-booting your PC to have Linux. It's AWESOME (especially Ubuntu, but I've only had Ubuntu so far).""
-                %p
-                  University students in the first or second year should give this program a shot. Also, students who have just graduated from school or are seeking courses in web development to learn latest/industry tools used by professionals. Lastly, anyone who has a deep deep desire to learn how webpages should be interested to join this program."
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/GraceTee.png', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Grace Tee Hui En
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1 1/2
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                I would most probably be looking for a company job as a transition from university into the working field and gain experience.
-
-              %p
-                Once I feel confident or when there is an opportunity, I would take other freelancing jobs on the side. I would also very much like to be a part of a startup company.
-            %p
-              %b What did you think about the program?
-              %p
-                It was inspiring and an eye opener to know the work flow and process involved in developing a mobile application. It was an opportunity to make valuable connections. Moreover, the track was at a good pace where it challenged us but was not too overwhelming. 
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  I would like to develop a application that would impact people and the environment.
-                %p
-                  Travel across the world and code along side people from other cultures and background.
-                %p
-                  Volunteer teaching disadvantaged people and inspire them to achieve more
-                
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Definitely something you won't want to miss if you are able to commit your time. Expect it to be challenging but fun. I would think all final year students and even fresh graduates would be interested to join this program.
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Tan Chin Loong
-          %p
-            %i University Malaya
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                Graduated already
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Become a better programmer. Build better software.
-
-            %p
-              %b What did you think about the program?
-              %p
-                Good guidance and advice from senior developer. Hands on work favours understanding of new knowledge.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Contribute to make Malaysia better.
-         
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Learn by doing can understand faster. It gets even better when being taught by good mentor. This program is a combination of both.
+      = render 'static_pages/breena'
+      = render 'static_pages/grace'
+      = render 'static_pages/chinloong'
 
 
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Enson Lau Chun Khye
-          %p
-            %i Asia Pacific University
-
-          .hidden
-            %p
-              %b How long before you graduate?
-
-              - finish_time = start_time + 18.months
-              %p
-                = "In " + distance_of_time_in_words(start_time, finish_time)#.titleize
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                #Answers
-
-              %p
-                #Answers
-
-              %p
-                #Answers
-            %p
-              %b What did you think about the program?
-              %p
-                #Answers
-
-              %p
-                #Answers
-              %p
-                #Answers
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/Marco.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Marco Lim Choon Yun
-          %p
-            %i Asia Pacific University
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1
-              
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Work for a while, preferably startups, to gain more knowledge and strengthen my programming skills.
-
-              %p
-                Be part of a development team that build things that solve a real world problem, and enhances human life.
-
-              %p
-                Probably startup my own after a few years, or go freelance.
-            %p
-              %b What did you think about the program?
-              %p
-                It's good to be exposed to things that is up to date, and also understand how the real world project be like.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Build apps that matter and solve real world problem.
-
-                %p
-                  Travel and broaden my horizon.
-
-                %p
-                  Try new sports like SKYDIVING!
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Get a Linux operating system (Ubuntu or Mint), dualboot or better yet ditch Windows because eventually you will end up using Linux in the future.
-
-                %p
-                  Prepare for tons of awesomeness XD    
+      = render 'static_pages/enson'  
+      = render 'static_pages/marco'  
 
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Tony Moey Seng Leong
-          %p
-            %i Monash University
+      = render 'static_pages/tony'
+      = render 'static_pages/rayson'
 
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Freelancer: Aspiring to work with other developers as a freelancer to create awesome possum web development projects
-
-              %p
-                Entreprenuer: Dream to start my own digital firm/ web development company/ marketing agency
-
-              %p
-                In short: I want to make awesome web applications that people will recognise, use on a daily basis or even change people's lives, with flexible working hours and being able to work from anywhere in the world. 
-            %p
-              %b What did you think about the program?
-              %p
-                Some nice things: I loved the culture among developers, something I wish to experience in my career or even better, create a similar culture in the team I aspire to build.
-
-
-              %p
-                Everyone was very friendly, helpful and patient. I learnt a whole lot from the program, including the technical and non technical aspects of it."
-
-          
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Build awesome web applications that can:
-                  %ol
-                    %li change the world
-                    %li change people's lives
-                    %li be used by everyone in their daily lives
-
-                %p
-                  Start my own company that shares my dreams, goals and vision, where I can re-create this amazing culture that I have picked up from the program.
-
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  * What should they be thinking?
-
-                  %p They should be thinking of enhancing their skills as a web developer and wanting to prepare themselves for the industry as the program teaches the industry standard tools, methodologies and more.
-                %p
-                  * What should they do to prepare?
-                  %p Brush up on HTML, CSS, Javascript. Other than that, come with an open mind, the willingness to learn and the attitude of tenacity and perseverance.
-
-                %p
-                  
-                  * Who should be interested in this program?
-                  %p Anyone who aspires to be a web developer.
-    
-
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: '/assets/profile_pics/rayson.jpg', width: '62px', height: '62px'}
-        .media-body
-          %h4.media-heading Leong Chin Poh
-          %p
-            %i University Malaya
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                Graduated Already
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Great! Will start some awesome work and studies!!
-
-            %p
-              %b What did you think about the program?
-              %p
-                Perfect! Great tutors great participants, the experience just awesome. =D
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Assist in any helping mankind or revolution industry work
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Prepare yourself with the knowledge of development life cycle, basic programming knowledge will do, and most importantly, be awesome! =D
   .row.project
     .col-xs-12
       = image_tag 'fastpr-logo-small.png', class: 'pull-right'
