--- a/app/views/static_pages/_tony.html.haml
+++ b/app/views/static_pages/_tony.html.haml
@@ -1,6 +1,6 @@
 .media
   %a.media-left.media-middle.pull-left{href: '/students/tony'}
-    %img{src: "holder.js/64x64"}
+    %img{src: "/assets/profile_pics/tony.jpg", width: '62px', height: '62px'}
   .media-body
     %h4.media-heading
       %a{href: '/students/tony'} Tony Moey Seng Leong
