--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -51,225 +51,16 @@
 
   .row.students
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Nor Shazwan Shah Bin Nor Hisham Shah
-          %p
-            %i Universiti Teknologi Malaysia
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                3
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                After i graduate i'm going to work for private company, gathering as much experience and knowledge as i can. But at the same time, i will be working on a project that i am planning to launch. After that, i am planning to start my own company with trusted friends. 
-
-            %p
-              %b What did you think about the program?
-              %p
-                I've learnt a lot about tools that can be used when developing in a team. My instructor is really helpful and knowledgeable.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  I want to build something that everybody can and will want to use everyday in their life.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  It is worth every bit of your time if you are willing to commit to it. Be curious and explore stuff that is not taught in the class.
-
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Fakhitah Binti Ridzuan
-          %p
-            %i Universiti Teknologi Malaysia
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                3
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Maybe i should proceed with master. Or maybe i should be thinking about working. Depends on the economy at the moment.  
-
-            %p
-              %b What did you think about the program?
-              %p
-                Super duper awesome. Join this first. And you'll get the feel
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Pursue master and phd before age 30.
-                %p
-                  Build my own company with my siblings.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Explore more. Expect less. Anyone who think that they are awesome should join this. Find your confidence and do your best. 
-    .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Nurfarrah 'Ain Amran
-          %p
-            %i Universiti Teknologi Malaysia
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                2
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Finding a job, get into interview, get a job, develop systems, get  experience, further study in business or management, build a company  
-
-            %p
-              %b What did you think about the program?
-              %p
-                Really beneficial for students, help students to experience a teamwork, experience to develop a real system, working with people, learning new thing (for me ruby, github, cloud9, heroku are new things)
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Develop at least one generic software that can facilitate many peoples such as myTeksi, develop many softwares that are beneficial to disable people, build my own company
-                %p
-                  Build my own company with my siblings.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Should have discipline, can work in a team, ready to sacrifice a few things, cam manage their time properly. However, this program gives them something more than what they done for this program. 
-
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Nur Atiqah Binti Awalludin
-          %p
-            %i Universiti Teknologi Malaysia
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                3
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Continue my studies by taking up MBA, then apply for a business and technology consultant spot at GOOGLE or any other up and coming major tech company. Become the first woman CEO of a technology company in Malaysia if the coveted role still exists. Teach people along the way.
-
-            %p
-              %b What did you think about the program?
-              %p
-                The program is great. It helps us learn new tricks in the never ending world of programming. I just wish if it didn't clash with our uni schedule and maybe be done during semester break. Then, I could have focused on the project more.
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Inspire at least one person to never give up on their dreams.
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Be ready for a huge commitment. I wasn't and I know how that ended. 
+      = render 'static_pages/shazwan'
+      = render 'static_pages/itah'
 
     .col-xs-4
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Ben Liew Voon Bin
-          %p
-            %i UTEM
+      = render 'static_pages/ain'
+      = render 'static_pages/tqah'
 
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                1
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                There is still 1 last academic study semester for me left, my aim is to continue building, continue learning, continue to hone my RoR skills. I also picked web app as my Final Year Project, which allow me to spend even more time on developing. And hopefully, by the end of the semester I will be good enough to be able to apply for Ruby on Rails developer. And the top of my list, is to intern or even better land a job in Silicon Valley, but at the end of the day, anywhere is alright as long as the tech scene in that city is active. So if you ask me what will I be doing right after I graduate will most probably try to land a job first in an active tech scene, and slowly learn and networking. As I am really interested in building my very own startup. 
-
-            %p
-              %b What did you think about the program?
-              %p
-                First of all, I'm really grateful that I'm being chosen for this program. It sparks my passion in programming all over again. Getting into this program, is one of the best choice I made during my university life. Alright back to the program, so the first thing I want to mention is that I am really thankful of Mr.Kevin, for his patience and time. As you all know, the FastPR class is actually conducted through hangouts remotely. And when you do things remotely like this especially teaching a bunch of newbies, people tend to get frustrated and eventually just give up or stop or something, but Kevin was very very patience with us even when we fail to do what we instructed. Or even when he needs to repeat the same thing over and over again, to the same group of students. As for the learning program, I'll say that it helps a lot, it speed up our learning process as well as answer a lot of our question which might take us hours of googling and searching around.  
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  I don't think I'll be able to say that I can save the world or something like that yet, but I do hope that one day to build a startup of my own that will eventually be part of everyone's life. 
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  Since this program directs to University students, especially last year students, I would say, if you're really planning to get into the tech scene, this is one of the best program that kickstarts your career. In my opinion, having a skill like Ruby on Rails web development definitely better than having great CGPA, I highly recommend this program for those who are planning to join the tech scene, especially as a developer. 
-
-      .media
-        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
-        .media-body
-          %h4.media-heading Ahmad Tahfiz bin Ahmad Fauzi
-          %p
-            %i Universiti Teknologi Malaysia
-
-          .hidden
-            %p
-              %b How many semesters do you have before you graduate?
-              %p
-                3
-            %p
-              %b Whats next, what do you see yourself doing with your life after you graduate?
-              
-              %p
-                Become a software developer/programmer in a cool and fun company
-
-            %p
-              %b What did you think about the program?
-              %p
-                It is enjoyable to learn and good to know working environment of a programmer
-
-            %p
-              %b What are your aspirations?
-              %p
-                %p
-                  Try your best in life and pray for better
-            %p
-              %b What would you say to someone that is interested to join this program
-              %p
-                %p
-                  It is really good learning process for students before graduates and good to know a working environment to real client
-
-
-
+    .col-xs-4
+      = render 'static_pages/ben'
+      = render 'static_pages/tahfiz'
 
   .row.project
     .col-xs-12
