--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -234,7 +234,7 @@
         .media-body
           %h4.media-heading Prasanth Kasi Rajan
           %p
-            %i Multi Media University
+            %i Multimedia University
 
           .hidden
             %p
@@ -344,7 +344,7 @@
         .media-body
           %h4.media-heading Jevaraajkumar A/L Selvarajah
           %p
-            %i Multi Media University
+            %i Multimedia University
 
           .hidden
             %p
